[gd_scene load_steps=3 format=2]

[ext_resource path="res://Level/GameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Level/textures/game_over.png" type="Texture" id=2]

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="GameOverText" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
